[project]
name = "agent-bus-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "google-genai>=1.69.0",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "honcho>=2.0.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
# Sobe toda a infraestrutura de IA de uma vez só (AgentBus + MCP + Worker)
dev = "honcho start"

# Abre o chat para você conversar com a rede
chat = "python interface_agent.py"

# Mantem os processos individuais para debugar algo isolado
bus = "python bus.py"
worker = "python worker_agent.py"
